--- a/projetoForm/form-app/package.json
+++ b/projetoForm/form-app/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@fontsource/zen-kurenaido": "^4.5.2",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.27.0",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
