--- a/projetoForm/form-app/package.json
+++ b/projetoForm/form-app/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dayjs": "^1.10.7",
+    "or": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactn": "^2.2.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
